[package]
name = "tor-async-compat"
version = "0.39.0"
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
description = "async_trait wrapper that uses ?Send on WASM"
keywords = ["tor", "arti", "async", "wasm"]
categories = ["asynchronous"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }