[package]
name = "microdesc-fetch"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arti-client = { path = "../../crates/arti-client", features = ["dirfilter", "experimental-api"] }
tor-circmgr = { path = "../../crates/tor-circmgr", features = ["specific-relay"] }
tor-proto = { path = "../../crates/tor-proto" }
tor-linkspec = { path = "../../crates/tor-linkspec" }
tor-llcrypto = { path = "../../crates/tor-llcrypto" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }